	invoking "free()".  Avoids the situation where the memory is freed
	to the heap and another thread manages to allocate it before the
	current thread manages to record it released.  A similar fix would
	be needed in dorealloc() but it isn't obvious how to apply the fix
	there because of the API definition; calls to realloc() are rare.

2008-03-10  Lassi A. Tuura  <lat@iki.fi>

	* IgProfFileDesc.h, IgProfMem.h, IgProfPerf.h: Remove as obsolete.
	* IgProfFileDesc.cc, IgProfMem.cc, IgProfPerf.cc: Adjust to
	removed headers, those above and IgProfPool.h.

2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* BuildFile: Remove optimisation kill override.

	* IgProfPerf.cc: Fix SIG_SETMASK logic; this sets the signal mask,
	not the signals allowed, so force the profiling signal out of the
	mask rather than forcing it in.  Improve debug output when signal
	handling overrides take place.

	* IgProf.cc (enabled, enable, disable): Make it more obvious that
	the profiling engine is disabled when thread-local flag is
	modified, but does not yet exist (while the thread is created).

2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc (enable, disable): Protect against activity for
	thread-local actions before the thread has been fully initialised.
	* IgProfTrace.h (freestart_, freeend_): Remove unused fields.
	* IgProfTrace.cc (mergeFrom): Fix various data traversal bugs.
	(debugDumpStack): Print more details about which value is which.
	(debugDump): Do print out the stack dump.

2008-03-06  Lassi A. Tuura  <lat@iki.fi>

	* Re-implement the handling of internal profiling buffers to
	reduce memory consumption for memory-heavy applications.
	Not entirely functional yet.
	* IgProfBuffer.h, IgProfBuffer.cc: New buffer core.
	* IgProfSymCache.h, IgProfSymCache.cc: Separate symbol caches.
	* IgProfTrace.h, IgProfTrace.cc: Simplify, just grow the buffer
	piece-meal as more data is added.  Remove ability to relocate the
	buffer and to do symbol mappings; we do the latter at the end.